<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_led_control</name>
  <version>0.0.0</version>
  <description>ROS2 Python package for controlling robot LEDs via Jetson GPIO</description>
  <maintainer email="ntiajubukason@gmail.com">Ntiaju Chukwuebuka Eric</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_led_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>